--- a/index.html
+++ b/index.html
@@ -23,12 +23,64 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+        <!-- Navegación -->
+        <header class="container-fluid fixed-top">
+          <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <div class="container-fluid">
+                <a class="navbar-brand fs-3 text-white roboto-bold" href="#"
+                  ><img
+                    class="img-fluid img-nav"
+                    src="./assets/img/viajes.svg"
+                    alt="Imagen logo principal"
+                  />
+                  Viajes Chile</a
+                >
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a
+                        class="nav-link active text-white"
+                        aria-current="page"
+                        href="#"
+                        >Inicio</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#somos">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#destacado"
+                        >Destacados</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#contacto">Contacto</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </header>
+    
     <!-- JS de bootstrap version 5.3.3-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+    ></script> 
     <!-- JQuery version 3.7.1-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/j
 query.min.js"></script>
