--- a/index.html
+++ b/index.html
@@ -291,6 +291,17 @@
             </div>
           </section>
         </main>
+        <footer
+      class="text-white bg-info d-flex align-items-center justify-content-around footer"
+    >
+      <h4 class="pt-2 roboto-regular">VIAJES CHILE</h4>
+      <h4 class="pt-2">
+        <a href="#"> <i class="fa-brands fa-square-github px-2"></i></a>
+        <a href="#"> <i class="fa-brands fa-linkedin px-2"></i></a>
+        <a href="#"><i class="fa-brands fa-square-x-twitter px-2"></i></a>
+        <a href="#"><i class="fa-brands fa-square-facebook px-2"></i></a>
+      </h4>
+    </footer>
     
     <!-- JS de bootstrap version 5.3.3-->
     <script
